better dir structure

--- a/views/page.html
+++ b/views/page.html
@@ -4,13 +4,13 @@
     <title>CoinCulture</title>
     <!-- jquery needed for bootstrap dropdowns ... sigh -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../assets/js/bootstrap.min.js"></script>
-    <link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+    <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
   </head>
  
   <body>
     <div class="container">
-      <img src="../assets/imgs/coinculture_and_balls.png" class="img-responsive" alt="Responsive image">
+        <img src="/imgs/coinculture_and_balls.png" class="img-responsive" alt="Responsive image">
 
       <!-- load nav bar -->
       {{template "nav.html" .}}
