--- a/views/nav.html
+++ b/views/nav.html
@@ -5,6 +5,7 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
                 {{range $proj := .Projects}}
                     {{ $sp := index $subprojs $proj }}
                     {{ if $sp }}
