--- a/views/footer.html
+++ b/views/footer.html
@@ -3,13 +3,13 @@
 <div class="navbar-inverse my-footer">
     <div class="container-fluid">
         <div class="col-md-4">
-            <p class="text-center navbar-text">support@coinculture.info</p>
+            <p class="text-center navbar-text">{{.Config.Email}}</p>
         </div>
         <div class="col-md-4 container span12">
             <p class="text-center navbar-text">This site was assembled by Bloke</p>
         </div>
         <div class="col-md-4">
-            <p class="text-center navbar-text"><a href="https://blog.coinculture.info">blog.coinculture.info</a></p>
+            <p class="text-center navbar-text"><a href="https://blog.coinculture.info">{{.Config.Site}}</a></p>
         </div>
     </div>
 </div>
