--- a/views/page.html
+++ b/views/page.html
@@ -8,10 +8,10 @@
  
   <body>
     <div class="container">
-      <img src="/imgs/coinculture_and_balls.png" class="img-responsive" alt="Responsive image">
+      <img src="/imgs/logo.png" class="img-responsive" alt="Responsive image">
+
       <!-- load nav bar -->
       {{template "nav.html" .}}
-
 
       <!-- left column (recent posts) -->
       <div class="col-md-3">
