monitor github repo

--- a/views/footer.html
+++ b/views/footer.html
@@ -6,10 +6,10 @@
             <p class="text-center navbar-text">{{.Config.Email}}</p>
         </div>
         <div class="col-md-4 container span12">
-            <p class="text-center navbar-text">This site was assembled by Bloke</p>
+            <p class="text-center navbar-text">This site was assembled by <a href="https://github.com/ebuchman/bloke">Bloke</a></p>
         </div>
         <div class="col-md-4">
-            <p class="text-center navbar-text"><a href="https://blog.coinculture.info">{{.Config.Site}}</a></p>
+            <p class="text-center navbar-text"><a href="{{.Config.Site}}">{{.Config.Site}}</a></p>
         </div>
     </div>
 </div>
