--- a/views/page.html
+++ b/views/page.html
@@ -18,7 +18,7 @@
           <h5>Recent Posts</h5>
           <ul>
               {{range $i, $n := .RecentPosts}}
-              <li><a href="posts/{{index $n 1}}">{{index $n 0}}</a></li>
+              <li><a href="{{index $n 1}}">{{index $n 0}}</a></li>
               {{ end }}
           </ul>
       </div>
