new bubbles cli. separate page from globals

--- a/views/footer.html
+++ b/views/footer.html
@@ -3,13 +3,13 @@
 <div class="navbar-inverse my-footer">
     <div class="container-fluid">
         <div class="col-md-4">
-            <p class="text-center navbar-text">{{.Config.Email}}</p>
+            <p class="text-center navbar-text">{{.Globals.Config.Email}}</p>
         </div>
         <div class="col-md-4 container span12">
             <p class="text-center navbar-text">This site was assembled by <a href="https://github.com/ebuchman/bloke">Bloke</a></p>
         </div>
         <div class="col-md-4">
-            <p class="text-center navbar-text"><a href="{{.Config.Site}}">{{.Config.Site}}</a></p>
+            <p class="text-center navbar-text"><a href="{{.Globals.Config.Site}}">{{.Globals.Config.Site}}</a></p>
         </div>
     </div>
 </div>
