--- a/views/page.html
+++ b/views/page.html
@@ -17,7 +17,7 @@
       <div class="col-md-3">
           <h5>Recent Posts</h5>
           <ul>
-              {{range $i, $n := .RecentPosts}}
+              {{range $i, $n := .Globals.RecentPosts}}
               <li><a href="{{index $n 1}}">{{index $n 0}}</a></li>
               {{ end }}
           </ul>
@@ -25,8 +25,8 @@
 
       <!-- center column (main text) -->
       <div class="col-md-6">
-          <h3>{{ .Title }}</h3>
-          {{ .Text }} 
+          <h3>{{ .Page.Title }}</h3>
+          {{ .Page.Text }} 
       </div>
 
       <!-- right column (bubbles) -->
