--- a/views/page.html
+++ b/views/page.html
@@ -4,9 +4,14 @@
     <title>CoinCulture</title>
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/css/style.css" rel="stylesheet">
+    <script type="text/javascript" src="/assets/js/wiki.js?a=271"></script>
   </head>
  
-  <body>
+    {{ if .Page.IsGlossary}}
+    <body onload="load_all_bubbles();">
+    {{ else }}
+    <body>
+    {{ end }}
     <div class="container">
       <img src="/imgs/logo.png" class="img-responsive" alt="Responsive image">
 
@@ -14,7 +19,7 @@
       {{template "nav.html" .}}
 
       <!-- left column (recent posts) -->
-      <div class="col-md-3">
+      <div id="col-recent-posts" class="col-md-3">
           <h5>Recent Posts</h5>
           <ul>
               {{range $i, $n := .Globals.RecentPosts}}
@@ -24,13 +29,15 @@
       </div>
 
       <!-- center column (main text) -->
-      <div class="col-md-6">
+      <div id="col-main" class="col-md-6">
           <h3>{{ .Page.Title }}</h3>
-          {{ .Page.Text }} 
+          <div id="main-text">
+            {{ .Page.Text }} 
+          </div>
       </div>
 
       <!-- right column (bubbles) -->
-      <div class="col-md-3">
+      <div id="col-bubbles" class="col-md-3">
         <div id="workflow">
           {{template "bubbles.html" .}}
         </div>
@@ -45,5 +52,4 @@
         I should probably just learn jquery-->
     <script src="/assets/js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/assets/js/wiki.js?a=271"></script>
 </html>
