--- a/views/page.html
+++ b/views/page.html
@@ -5,6 +5,8 @@
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/css/style.css" rel="stylesheet">
     <script type="text/javascript" src="/assets/js/wiki.js?a=271"></script>
+
+    
   </head>
  
     {{ if .Page.IsGlossary}}
@@ -34,6 +36,22 @@
           <div id="main-text">
             {{ .Page.Text }} 
           </div>
+          
+          <!-- disqus commenting system. can it really be this easy?!?! -->
+          <div id="disqus_thread"></div>
+          <script type="text/javascript">
+              /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+              var disqus_shortname = 'coincultureblog'; // required: replace example with your forum shortname
+
+              /* * * DON'T EDIT BELOW THIS LINE * * */ // ok ;)
+              (function() {
+                  var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                  dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+              })();
+          </script>
+          <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
       </div>
 
       <!-- right column (bubbles) -->
