--- a/views/page.html
+++ b/views/page.html
@@ -6,7 +6,6 @@
     <link href="/assets/css/style.css" rel="stylesheet">
     <script type="text/javascript" src="/assets/js/wiki.js?a=271"></script>
 
-    
   </head>
  
     {{ if .Page.IsGlossary}}
@@ -15,7 +14,7 @@
     <body>
     {{ end }}
     <div class="container">
-      <img src="/imgs/logo.png" class="img-responsive" alt="Responsive image">
+      <img id="logo" src="/imgs/logo.png" class="img-responsive img-round" alt="Responsive image">
 
       <!-- load nav bar -->
       {{template "nav.html" .}}
