changed main id to bupbles instead if dumb long underscores

--- a/views/bubbles.html
+++ b/views/bubbles.html
@@ -1,6 +1,6 @@
    <!-- this prototype bubble is cloned in bubbles.js 
         and instantiated everytime a link is clicked -->
-   <div id="entry_div_box_proto" draggable="true">
+   <div id="bupbles" draggable="true">
         <div class="entry">
             <input type="submit" name="close_entry" value="x" class="x_button" onClick="close_bubble(this.parentNode.parentNode.id)">
             <div class="big_content_box">
