--- a/views/page.html
+++ b/views/page.html
@@ -31,7 +31,7 @@
 
       <!-- center column (main text) -->
       <div id="col-main" class="col-md-6">
-          <h3>{{ .Page.Title }}</h3>
+          <h3 id="main-title">{{ .Page.Title }}</h3>
           <div id="main-text">
             {{ .Page.Text }} 
           </div>
