--- a/views/nav.html
+++ b/views/nav.html
@@ -14,7 +14,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{index $proj 1}}<span class="caret"></span></a>
                           <ul class="dropdown-menu" role="menu">
                             {{ range $s := $sp }} 
-                            <li><a href="#/" onClick="get_page_data('{{index $proj 0}}/{{index $s 0}})'">{{index $s 1}}</a></li>
+                            <li><a href="#/" onClick="get_page_data('{{index $proj 0}}/{{index $s 0}}')">{{index $s 1}}</a></li>
                                 <li class="divider"></li>
                             {{ end }}
                           </ul>
