local assets and views

--- a/views/page.html
+++ b/views/page.html
@@ -4,6 +4,7 @@
     <title>CoinCulture</title>
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="/assets/css/main.css" rel="stylesheet">
     <script type="text/javascript" src="/assets/js/wiki.js?a=271"></script>
 
   </head>
